--- a/index.html
+++ b/index.html
@@ -4,9 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Form</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header>
+      <div class="inner-container">
+        <h1 class="sr-only">Company Name</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" width="75.14" height="72.676" viewBox="0 0 75.14 72.676"><path d="M51.85 29.084c8.017 0 14.522-6.514 14.522-14.536C66.372 6.524 59.866 0 51.85 0c-8.03 0-14.573 6.524-14.573 14.548 0 8.022 6.543 14.536 14.573 14.536M0 3.256h24.701v69.42H0zM57.695 37.136L35.367 50.087l11.5 22.589h28.272z"></path></svg>
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Branding</a></li>
+            <li><a href="#">Website</a></li>
+            <li><a href="#">packaging</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section>
+      <h2>Project form</h2>
+      <p>Fill in the fields below and describe your needs.</p>
+      <p>In return we will contact you and suggest solutions for your business needs.</p>
+        <form action="#" method="post" name="project-form">
+          <fieldset>
+            <div class="">
+              <label for="name">Name/Surname</label>
+              <input id="name" name="name" type="text" placeholder="e.g. Jane Doe" required minlength="3" autofocus>
+            </div>
+            <div class="">
+              <label for="company">Company</label>
+              <input id="company" name="company" type="text" placeholder="To get to you knows" required minlength="3">
+            </div>
+            <div class="">
+              <label for="tel">Tel.</label>
+              <input id="tel" name="tel" type="text" placeholder="To get in touch with you" required minlength="10">
+            </div>
+            <div class="">
+              <label for="city">City</label>
+              <input id="city" name="city" type="text" placeholder="For your region's code" required>
+            </div>
+            <div class="">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" placeholder="For our written communication" required >
+            </div>
+            <div class="">
+              <label for="website">Website</label>
+              <input id="website" name="website" type="text" placeholder="www.website" required>
+            </div>
+          </fieldset>
+            <h3>Specifics</h3>
+          <fieldset>
+              <div class="">
+                <label for="deadline">Deadline</label>
+                <input id="deadline" name="deadline" type="date" required>
+              </div>
+              <div class="">
+                <label for="budget">Budget</label>
+                <input id="budget" name="budget" type="text" placeholder="$5000 - $10,000" required minlength="3">
+              </div>
+              <div class="">
+                <label for="prj-url">Project Url</label>
+                <input id="prj-url" name="prj-url" type="text" placeholder="www.website" required minlength="10">
+              </div>
+              <div class="">
+                <label for="target-audience">Target Audience</label>
+                <input id="target-audience" name="target-audience" type="text" placeholder="Your specific target audience" required>
+              </div>
+              <div class="">
+                <label for="prj-desc">Project Description</label>
+                <textarea id="prj-desc" name="prj-desc" rows="8" cols="80" placeholder="Describe your vision or needs..."></textarea>
+              </div>
+          </fieldset>
+          <p>By completing and sending the data, you agree to the privacy policy.</p>
+          <div class="accept-checkbox">
+            <input id="accept" type="checkbox">
+            <label for="accept">Accept</label>
+          </div>
+          <div>
+            <input type="submit" value="Send >">
+          </div>
+      </form>
+    </section>
 </body>
 </html>
